--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"immer": "^9.0.6",
+		"postcss": "^8.4.5",
+		"node-forge": "^1.2.1"
 	}
 }
